# storj-interface

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  duplicate.hurl  fly.toml  move.hurl  readme.md  renterd v2.postman_collection.json  setup-sia.sh  storj-interface-entrypoint.sh  storj-interface.service  update-storj-interface.sh
.github/workflows/: build-binary.yml  deploy-preview.yml  e2e-tests.yml  logs.yml  publish-image.yml  remove-ssh-key.yml
scripts/: cleanup-s3-test-ci.sh  cleanup-s3-test-files.sh
src/: consts.rs  lib.rs  main.rs  s3_client.rs  sia_client.rs
src/routes/: duplicate.rs  duplicate_hls.rs  mod.rs  move2nsfw.rs
src/routes/sia/: duplicate.rs  mod.rs  move2nsfw.rs
src/routes/storj/: duplicate.rs  mod.rs  move2nsfw.rs
test/: confirm_duplicate.hurl  confirm_duplicate_hls.hurl  confirm_duplicate_raw.hurl  confirm_move.hurl  duplicate.hurl  duplicate_hls.hurl  duplicate_raw.hurl  example-test.vars  move.hurl
test/test-hls-files/: data_0_000.ts  data_1_000.ts  data_2_000.ts  master.m3u8  playlist_0.m3u8  playlist_1.m3u8  playlist_2.m3u8
