[package]
name = "storj-interface"
version = "0.1.0"
edition = "2021"

[lib]
name = "storj_interface"
path = "src/lib.rs"

[[bin]]
name = "storj-interface"  # Same as lib name
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
futures-util = "0.3.31"
once_cell = "1.21.1"
# using rustls-tls because we wanna cross-compile to musl, otherwise openssl becomes a pain
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
