[package]
name = "storj-interface"
version = "0.1.0"
edition = "2021"

[lib]
name = "storj_interface"
path = "src/lib.rs"

[[bin]]
name = "storj-interface"  # Same as lib name
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.64"
axum = { version = "0.8.1", features = ["multipart"] }
bytes = "1.8"
futures-util = "0.3.31"
http-body-util = "0.1"
once_cell = "1.21.1"
# using rustls-tls because we wanna cross-compile to musl, otherwise openssl becomes a pain
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
